all but the footer

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 						<img
 							src="./assets/coalition-logo.png"
 							alt="Coalition's logo"
-							width="100"
-							height="50"
+							width="40"
+							height="40"
 						/>
 					</a>
 				</div>
@@ -27,65 +27,135 @@
 					<a href="#climb">02. TEAM</a>
 				</div>
 			</nav>
-			<h1>LOS ANGELES MOUNTAINS</h1>
+			<div class="big-name-container">
+				<h1 class="big-name">
+					<span class="font-1">LOSANGELES</span>
+					<span class="font-2">MOUNTAINS</span>
+				</h1>
+			</div>
 		</section>
 		<div class="buffer">
-			<div>
-				<!--  -->
+			<div class="logo-and-text">
+				<div class="buffer-logo">
+					<a href="/">
+						<img
+							src="./assets/coalition-logo.png"
+							alt="Coalition's logo"
+							width="50"
+							height="50"
+						/>
+					</a>
+				</div>
+				<div>
+					<h3 class="logo-text">
+						<span>LOSANGELES</span>
+						<span>MOUNTAINS</span>
+					</h3>
+				</div>
+			</div>
+			<div class="buffer-links">
+				<a href="#history">01. HISTORY</a>
+				<a href="#climb">02. TEAM</a>
 			</div>
 		</div>
 		<section class="history-section" id="history">
-			<div>
-				<span>01.</span><span>HISTORY</span>
-			</div>
-			<div>
-				<p>
-					Et et saepe libero aut nisi harum. Omnis
-					ipsam commodi velit. Perspiciatis
-					tenetur mollitia delectus dolores
-					similique. Aut voluptatem iure possimus.
-					Eveniet ab doloremque sint cupiditate
-					nihil qui dicta et. Modi aut et
-					voluptatem quos. Beatae quisquam
-					voluptatem officia. Et laborum enim et
-					harum nihil. Recusandae id tempora sunt.
-					Facere et maxime ut soluta ipsam laborum
-					dolor.
-				</p>
+			<div class="history-content-container">
+				<div class="history-header">
+					<span class="number">01.</span>
+					<span class="section-title"
+						>HISTORY</span
+					>
+				</div>
+				<div class="history-text-container">
+					<p class="history-text">
+						Et et saepe libero aut nisi harum.
+						Omnis ipsam commodi velit.
+						Perspiciatis tenetur mollitia delectus
+						dolores similique. Aut voluptatem iure
+						possimus. Eveniet ab doloremque sint
+						cupiditate nihil qui dicta et. Modi
+						aut et voluptatem quos. Beatae
+						quisquam voluptatem officia. Et
+						laborum enim et harum nihil.
+						Recusandae id tempora sunt. Facere et
+						maxime ut soluta ipsam laborum dolor.
+					</p>
+				</div>
 			</div>
 			<div class="carousel">
-				<!--  -->
-			</div>
-		</section>
-		<section>
-			<div>
-				<span>02.</span><span>CLIMB</span>
-			</div>
-			<div>
-				<p>
-					Et et saepe libero aut nisi harum. Omnis
-					ipsam commodi velit. Perspiciatis
-					tenetur mollitia delectus dolores
-					similique.
-				</p>
+				<div class="carousel-images">
+					<img
+						src="./assets/climber.png"
+						alt="Coalition's logo"
+						width="150"
+						height="100"
+					/>
+					<img
+						src="./assets/scene.png"
+						alt="Coalition's logo"
+						width="150"
+						height="100"
+					/>
+					<img
+						src="./assets/climber.png"
+						alt="Coalition's logo"
+						width="150"
+						height="100"
+					/>
+					<img
+						src="./assets/scene.png"
+						alt="Coalition's logo"
+						width="150"
+						height="100"
+					/>
+				</div>
 			</div>
 		</section>
 		<section class="climb-section" id="climb">
-			<div class="mountain-tabs">
-				<p>MOUNTAIN 1</p>
-				<p>MOUNTAIN 2</p>
+			<div class="climb-content-container">
+				<div class="climb-header">
+					<span class="number">02.</span>
+					<span class="section-title">CLIMB</span>
+				</div>
+				<div>
+					<p>
+						Et et saepe libero aut nisi harum.
+						Omnis ipsam commodi velit.
+					</p>
+				</div>
 			</div>
+		</section>
+		<div class="mountain-tabs">
+			<div class="tabs-inner">
+				<p class="mountain-tab-1">MOUNTAIN 1</p>
+				<p class="mountain-tab-2">MOUNTAIN 2</p>
+			</div>
+		</div>
+		<section class="schedule-section">
 			<div class="schedule-box">
-				<p>25 Nov 2016</p>
-				<p>Omnis ipsam commodi velit.</p>
-				<p>28 Nov 2016</p>
-				<p>Omnis ipsam commodi velit.</p>
-				<span></span>
-				<p>18 Dec 2016</p>
-				<p>Omnis ipsam commodi velit.</p>
-				<span></span>
-				<p>7 Jan 2017</p>
-				<p>Omnis ipsam commodi velit.</p>
+				<p class="section-title">SCHEDULE</p>
+				<span class="schedule-divider">
+					<span class="schedule-row">
+						<p>25 Nov 2016</p>
+						<p>Omnis ipsam commodi velit.</p>
+					</span>
+					<span class="schedule-row">
+						<p>28 Nov 2016</p>
+						<p>Omnis ipsam commodi velit.</p>
+					</span>
+				</span>
+				<span class="schedule-divider">
+					<span class="schedule-row">
+						<p>18 Dec 2016</p>
+						<p>Omnis ipsam commodi velit.</p>
+					</span>
+				</span>
+				<span class="schedule-divider">
+					<span class="schedule-row">
+						<p>7 Jan 2017</p>
+						<p>Omnis ipsam commodi velit.</p>
+					</span>
+				</span>
 			</div>
 		</section>
 		<footer>
