all, but not responsive

--- a/index.html
+++ b/index.html
@@ -159,8 +159,31 @@
 			</div>
 		</section>
 		<footer>
-			<div class="logo"></div>
-			<p>COPYRIGHT 2016. ALL RIGHTS RESERVED.</p>
+			<div class="logo-and-text">
+				<div class="logo-plus-text">
+					<div class="buffer-logo">
+						<a href="/">
+							<img
+								src="./assets/coalition-logo.png"
+								alt="Coalition's logo"
+								width="25"
+								height="25"
+							/>
+						</a>
+					</div>
+					<div>
+						<p class="logo-text">
+							<span>LOSANGELES</span>
+							<span>MOUNTAINS</span>
+						</p>
+					</div>
+				</div>
+				<div>
+					<p>
+						COPYRIGHT 2016. ALL RIGHTS RESERVED.
+					</p>
+				</div>
+			</div>
 		</footer>
 	</body>
 </html>
